[perf] Issue#31 OPTIMIZE CHECK/GRANT OF INNODB TABLE LOCK

Description:
------------
Since most workload in production environment is normal DML/SELECT
(this should be very common on most OLTP workload).
So for InnoDB table lock:
1. most time there's only LOCK_IX/LOCK_IS table lock
2. LOCK_S/LOCK_X rarely happen

This patch adds some counters to identify if LOCK_S/LOCK_X is granted
and quickly exit function lock_table_other_has_incompatible().
This will improve the performance especially when all DML focused on
the same table.

For more deatail, please refer: http://bugs.mysql.com/bug.php?id=72948.

This patch also fixes bug#68647 which reduce the overhead of
'SHOW ENGINE INNODB STATUS' and removes some complier warinings.